syntax = "proto3";

import "proto/role.proto";

package proto;

service Role {
    // Query
    rpc GetListRole(GetPaginationRoleRequest) returns (RoleMultiResponse) {}

    // Mutation
    rpc AddRole(InputRole) returns (RoleResponseWithMessage) {}
    rpc UpdateRole(InputUpdateRole) returns (RoleResponseWithMessage) {}
    rpc DeleteRole(InputDeleteRole) returns (RoleResponseWithMessage) {}
}